--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.16.2",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
     "react-spinners": "^0.10.6",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
