--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.16.2",
     "date-fns": "^2.21.1",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
