--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.16.2",
+    "bootstrap": "^5.0.0",
     "date-fns": "^2.21.1",
     "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
