--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "react-select-country-list": "^2.2.3",
     "react-spinners": "^0.10.6",
     "react-st-modal": "^1.1.3",
     "react-switch": "^6.0.0",
