--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^2.1.2",
     "react-google-maps": "^9.4.5",
+    "react-qr-code": "^1.1.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
