--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.16.2",
     "bootstrap": "^5.0.0",
+    "clsx": "^1.1.1",
     "date-fns": "^2.21.1",
     "google-maps-react": "^2.0.6",
+    "highcharts": "^9.1.2",
+    "highcharts-react-official": "^3.0.0",
     "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.8.0",
@@ -33,6 +37,8 @@
     "react-spinners": "^0.10.6",
     "react-st-modal": "^1.1.3",
     "react-switch": "^6.0.0",
+    "react-table": "^7.7.0",
+    "react-virtualized": "^9.22.3",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
